force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Add_On_Attempted_Beadtypes__c.field-meta.xml
<CustomField>
    <fullName>Add_On_Attempted_Beadtypes__c</fullName>
    <description>Number of attempted beadtypes for custom quotes created in MyIllumina</description>
    <label>Add On Attempted Beadtypes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>