force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Applied_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Applied_Discount_Amount__c</fullName>
    <description>Final Discount Amount calculated after cart is validated.</description>
    <label>Applied Discount Amount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>