force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Applied_Discount_Details__c.field-meta.xml
<CustomField>
    <fullName>Applied_Discount_Details__c</fullName>
    <description>Contains the category of Discount appliedon line item.</description>
    <label>Applied Discount Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>