force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Applied_Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Applied_Discount_Percentage__c</fullName>
    <description>Final Discount calculated after cart is validated in percentage</description>
    <label>Applied Discount Percentage</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>