force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Approval_Category__c.field-meta.xml
<CustomField>
    <fullName>Approval_Category__c</fullName>
    <description>Specify the Approval needs to be submitted for which category (e.g. Product Level Approval, Product Category Level Approval, Sales Discretionary Discount approval, Service Type Approval etc)</description>
    <label>Approval Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cpq_Discount</fullName>
                <label>Cpq Discount</label>
            </value>
            <value>
                <fullName>Cpq_Material_Number</fullName>
                <label>Cpq Material Number</label>
            </value>
            <value>
                <fullName>Cpq_Material_Group_1</fullName>
                <label>Cpq Material Group 1</label>
            </value>
            <value>
                <fullName>Cpq_Material_Number_Custom</fullName>
                <label>Cpq Material Number Custom</label>
            </value>
            <value>
                <fullName>Cpq_Material_Group_Custom</fullName>
                <label>Cpq Material Group Custom</label>
            </value>
            <value>
                <fullName>Cpq_Discount_Custom</fullName>
                <label>Cpq Discount Custom</label>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Product_Category</fullName>
                <label>Product Category</label>
            </value>
            <value>
                <fullName>Discount</fullName>
            </value>
            <value>
                <fullName>Material_Class</fullName>
                <label>Material Class</label>
            </value>
            <value>
                <fullName>Product_Group</fullName>
                <label>Product Group</label>
            </value>
            <value>
                <fullName>Product_Line</fullName>
                <label>Product Line</label>
            </value>
            <value>
                <fullName>Promotion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>