force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Approval_Hierarchy_Product__c.field-meta.xml
<CustomField>
    <fullName>Approval_Hierarchy_Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to approval hierarchy applicable for Material Number Custom Flow Approval scenario</description>
    <label>Approval Hierarchy (Product)</label>
    <referenceTo>Approval_Hierarchy__c</referenceTo>
    <relationshipLabel>Proposal Line Items</relationshipLabel>
    <relationshipName>Proposal_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>