force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Approval_Hierarchy_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Approval_Hierarchy_Product_Group__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to approval hierarchy applicable for Material Group Custom Flow Approval scenario</description>
    <label>Approval Hierarchy (Product Group)</label>
    <referenceTo>Approval_Hierarchy__c</referenceTo>
    <relationshipLabel>Proposal Line Items (Approval Hierarchy (Product Group))</relationshipLabel>
    <relationshipName>Proposal_Line_Items4</relationshipName>
    <type>Lookup</type>
</CustomField>