force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Approval_Hierarchy_Record_Owner__c.field-meta.xml
<CustomField>
    <fullName>Approval_Hierarchy_Record_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to approval hierarchy calculated for Record Owner Approval scenario</description>
    <label>Approval Hierarchy (Record Owner)</label>
    <referenceTo>Approval_Hierarchy__c</referenceTo>
    <relationshipLabel>Quotation Line Items (Approval Hierarchy (Record Owner))</relationshipLabel>
    <relationshipName>Quotation_Line_Items4</relationshipName>
    <type>Lookup</type>
</CustomField>