force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Approval_Hierarchy_UC_Discount__c.field-meta.xml
<CustomField>
    <fullName>Approval_Hierarchy_UC_Discount__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to approval hierarchy calculated for Transborder Record Owner Approval scenario</description>
    <label>Approval Hierarchy (UC Discount)</label>
    <referenceTo>Approval_Hierarchy__c</referenceTo>
    <relationshipLabel>Proposal Line Items (Approval HierarchyApproval Hierarchy (UC)</relationshipLabel>
    <relationshipName>Proposal_Line_Items7</relationshipName>
    <type>Lookup</type>
</CustomField>