force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Approval_Level_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Approval_Level_Product_Line__c</fullName>
    <description>Approval Level calculated for Product Line approval scenario</description>
    <label>Approval Level (Product Line)</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>