force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Approval_Level_Promotion_4__c.field-meta.xml
<CustomField>
    <fullName>Approval_Level_Promotion_4__c</fullName>
    <description>Approval Level calculated for the fourth promo applied in Promotion Approval scenario</description>
    <label>Approval Level (Promotion 4)</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>