force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Approval_Level_Promotion__c.field-meta.xml
<CustomField>
    <fullName>Approval_Level_Promotion__c</fullName>
    <description>Approval Level for Promotion Discounts</description>
    <label>Approval Level (Promotion)</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>