force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Approval_Level_Record_Owner__c.field-meta.xml
<CustomField>
    <fullName>Approval_Level_Record_Owner__c</fullName>
    <description>Approval Level calculated for Record Owner Approval scenario</description>
    <label>Approval Level (Record Owner)</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>