force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Approval_Level_UC_Discount__c.field-meta.xml
<CustomField>
    <fullName>Approval_Level_UC_Discount__c</fullName>
    <description>Approval Level calculated for Transborder Record Owner Approval scenario</description>
    <label>Approval Level (UC Discount)</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>