force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Apttus_QPConfig__BillingFrequency__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPConfig__BillingFrequency__c</fullName>
    <description>The billing frequency associated with the recurring or usage price</description>
    <inlineHelpText>The billing frequency associated with the recurring or usage price</inlineHelpText>
    <label>Billing Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>2-Year Invoicing</fullName>
            </value>
            <value>
                <fullName>3-Year Invoicing</fullName>
            </value>
            <value>
                <fullName>4-Year Invoicing</fullName>
            </value>
            <value>
                <fullName>5-Year Invoicing</fullName>
            </value>
            <value>
                <fullName>Half-Yearly Invoicing</fullName>
            </value>
            <value>
                <fullName>In-Full Advance Invoicing</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Monthly Invoicing</fullName>
            </value>
            <value>
                <fullName>Monthly Invoicing on First of Month</fullName>
            </value>
            <value>
                <fullName>Monthly Invoicing on Last of Month</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Quarterly Invoicing</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>Yearly Invoicing</fullName>
            </value>
            <value>
                <fullName>Yearly Invoicing First of Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>