force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Apttus_QPConfig__Quantity2__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPConfig__Quantity2__c</fullName>
    <description>The product or service quantity</description>
    <label>Quantity (2)</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>