force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Beadchip_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Beadchip_Part_Number__c</fullName>
    <description>Created as part of DCP-535.</description>
    <label>Beadchip Part Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>