force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Control_Code_India_SAC__c.field-meta.xml
<CustomField>
    <fullName>Control_Code_India_SAC__c</fullName>
    <formula>Apttus_Proposal__Product__r.Control_Code_India_SAC__c</formula>
    <label>Control Code (SAC)</label>
    <type>Text</type>
</CustomField>