force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Custom_License_Flag__c.field-meta.xml
<CustomField>
    <fullName>Custom_License_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates Custom License Flag value</description>
    <label>Custom License Flag</label>
    <type>Checkbox</type>
</CustomField>