force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Custom_License_Setup_Required__c.field-meta.xml
<CustomField>
    <fullName>Custom_License_Setup_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether Custom License setup is required or not for the given line item</description>
    <label>Custom License Setup Required?</label>
    <type>Checkbox</type>
</CustomField>