force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Custom_Licensing_Description__c.field-meta.xml
<CustomField>
    <fullName>Custom_Licensing_Description__c</fullName>
    <description>Field to store description of the license of the product</description>
    <label>Custom Licensing Description</label>
    <type>TextArea</type>
</CustomField>