force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Custom_Setup_Required__c.field-meta.xml
<CustomField>
    <fullName>Custom_Setup_Required__c</fullName>
    <description>Field to indicate if custom setup is required or not</description>
    <defaultValue>false</defaultValue>
    <label>Custom Setup Required?</label>
    <type>Checkbox</type>
</CustomField>