force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Customer_Applied_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Customer_Applied_Discount_Amount__c</fullName>
    <description>Created as a part of story 13016 while adding new columns to the cart.</description>
    <label>Customer Applied Discount Amount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>