force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Customer_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Customer_List_Price__c</fullName>
    <description>Created as a part of story 13016 while adding new columns to the cart.</description>
    <label>Customer List Price</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>