force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Customer_Net_Price__c.field-meta.xml
<CustomField>
    <fullName>Customer_Net_Price__c</fullName>
    <description>Stores Customer Net Price value for the line item</description>
    <label>Customer Net Price</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>