force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Customer_Premium_Amount_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Customer_Premium_Amount_Per_Unit__c</fullName>
    <description>Stores Customer Premium Amount per unit value for the line item</description>
    <label>Customer Premium Amount Per Unit</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>