force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Derived_From_Name__c.field-meta.xml
<CustomField>
    <fullName>Derived_From_Name__c</fullName>
    <description>Displays the line item name from which the proposal line item is derived</description>
    <formula>Apttus_QPConfig__DerivedFromId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Derived From Name</label>
    <type>Text</type>
</CustomField>