force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Discounted_Price_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Discounted_Price_Per_Unit__c</fullName>
    <description>Created as part of DCP-535.</description>
    <label>Discounted Price Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>