force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Distributor_Rebate__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Rebate__c</fullName>
    <description>Created to calculate the Distributor Rebate as a part of the Story 13308</description>
    <inlineHelpText>Customer Net Price - Distributor Net Price</inlineHelpText>
    <label>Distributor Commission</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>