force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Distributor_Specific_Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Specific_Discount_Percentage__c</fullName>
    <description>Distributor based discount value in terms of percentage</description>
    <label>Distributor Specific Discount %</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>