force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Distributor_Specific_Price__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Specific_Price__c</fullName>
    <description>Distributor Specific Price provided by the distributor for indirect quoting scenario</description>
    <label>Distributor Specific Price</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>