force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Domain_Name__c.field-meta.xml
<CustomField>
    <fullName>Domain_Name__c</fullName>
    <description>Name of the current Domain</description>
    <label>Domain Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>