force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/End_Of_Sale_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Of_Sale_Date__c</fullName>
    <description>Stores the end of sale date for the given product in line item</description>
    <label>End Of Sale Date</label>
    <type>Date</type>
</CustomField>