force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Equipment_Id__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Id__c</fullName>
    <description>Stores the Equipment Id details for the product in line item</description>
    <label>Equipment Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>