force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/ERP_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>ERP_Line_Number__c</fullName>
    <description>Unique Identifier for every line item</description>
    <externalId>true</externalId>
    <label>ERP Line Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>