force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/ERP_Line_Number_Id__c.field-meta.xml
<CustomField>
    <fullName>ERP_Line_Number_Id__c</fullName>
    <description>In case of renewal will copy the ERP order line item id from the asset line item.</description>
    <externalId>true</externalId>
    <label>ERP Line Number Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>