force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Existing_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Existing_Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to existing subscription order line item</description>
    <label>Existing Subscription</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Apttus_Config2__OrderLineItem__c.Apttus_Config2__ProductId__r.Material_Class__c</field>
            <operation>equals</operation>
            <value>Informatics Software</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Apttus_Config2__OrderLineItem__c</referenceTo>
    <relationshipLabel>Quotation Line Items</relationshipLabel>
    <relationshipName>Existing_Subscription</relationshipName>
    <type>Lookup</type>
</CustomField>