force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Freight_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Freight_Discount_Amount__c</fullName>
    <description>Created as part of DCP-535.</description>
    <label>Freight Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>