force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Informatics_SKU_Type__c.field-meta.xml
<CustomField>
    <fullName>Informatics_SKU_Type__c</fullName>
    <description>Stores the Informatics SKU type for the product on line item</description>
    <formula>Apttus_Proposal__Product__r.Informatics_SKU_Type__c</formula>
    <label>Informatics SKU Type</label>
    <type>Text</type>
</CustomField>