force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Is_Dragen__c.field-meta.xml
<CustomField>
    <fullName>Is_Dragen__c</fullName>
    <description>Indicates whether current material number is of Dragen type</description>
    <formula>Apttus_Proposal__Product__r.Informatics_Family__c =  $CustomMetadata.Code_Parameter__mdt.Informatics_Dragen_Family.PickListValue__c</formula>
    <label>Is Dragen?</label>
    <type>Checkbox</type>
</CustomField>