force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Is_Free_Trial__c.field-meta.xml
<CustomField>
    <fullName>Is_Free_Trial__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to verify if a product is Free Trial or not</description>
    <label>Is Free Trial</label>
    <type>Checkbox</type>
</CustomField>